# matrixgen

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: MatrixgenConfig.cmake.in  external-tools.cmake
documentation/: CMakeLists.txt
examples/: CMakeLists.txt  ex1-adjmat.cpp  ex1-assemble.cpp  ex1-create.cpp  ex2-adjmat.cpp  ex2-assemble.cpp  ex3-adjmat.cpp  ex4-adjmat.cpp  ex5-adjmat.cpp  ex6-adjmat.cpp  ex7-adjmat.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/matrixgen/: adjacency-matrix.hpp  adjmat.hpp  assemble.hpp  core  create.hpp  interleave.hpp  perturb.hpp  presets.hpp  stencil.hpp  utility.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  unit-tests.cpp
unittests/: CMakeLists.txt  unittests.cpp
